infra/terraform/modules/aws_VPC_setup/vpc.tf
resource "aws_vpc" "aws_test_vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "${var.org_name}-${var.app_name}-${var.env}-vpc"
  }
}

resource "aws_vpc_dhcp_options" "domain" {
  domain_name         = var.domain_name
  domain_name_servers = var.domain_name_servers

  tags = {
    Name = "${var.env}-dhcp-options"
  }
}

resource "aws_vpc_dhcp_options_association" "this" {
  vpc_id          = aws_vpc.aws_test_vpc.id
  dhcp_options_id = aws_vpc_dhcp_options.domain.id
}
